@@ -68,12 +68,25 @@ function server() {
 # load schema and procedures
 function init() {
     jars-ifneeded
-    sqlcmd < ddl.sql
+    sqlcmd --servers=$SERVERS < ddl.sql
 }
+
+version=$(java -version 2>&1 | awk -F '"' '/version/ {print $2}')
+add_open=
+if [[ $version == 11.0* ]] || [[ $version == 17.0* ]] ; then
+	add_open="--add-opens java.base/sun.nio.ch=ALL-UNNAMED"
+fi
 
 # run the client that drives the example
 function client() {
     async-benchmark
+}
+
+# trivial client code for illustration purposes
+function simple-benchmark() {
+    jars-ifneeded
+    java -classpath voter-client.jar:$CLIENTCLASSPATH -Dlog4j.configuration=file://$LOG4J \
+        voter.SimpleBenchmark $SERVERS
 }
 
 # Asynchronous benchmark sample
@@ -85,23 +98,16 @@ function async-benchmark-help() {
 
 # latencyreport: default is OFF
 # ratelimit: must be a reasonable value if lantencyreport is ON
-# Disable the comments to get latency report
 function async-benchmark() {
     jars-ifneeded
-    java -classpath voter-client.jar:$CLIENTCLASSPATH voter.AsyncBenchmark \
+    java $add_open \
+	-classpath voter-client.jar:$CLIENTCLASSPATH voter.AsyncBenchmark \
         --displayinterval=5 \
         --warmup=5 \
         --duration=120 \
         --servers=$SERVERS \
         --contestants=6 \
         --maxvotes=2
-}
-
-# trivial client code for illustration purposes
-function simple-benchmark() {
-    jars-ifneeded
-    java -classpath voter-client.jar:$CLIENTCLASSPATH -Dlog4j.configuration=file://$LOG4J \
-        voter.SimpleBenchmark $SERVERS
 }
 
 # Multi-threaded synchronous benchmark sample
@@ -113,7 +119,8 @@ function sync-benchmark-help() {
 
 function sync-benchmark() {
     jars-ifneeded
-    java -classpath voter-client.jar:$CLIENTCLASSPATH -Dlog4j.configuration=file://$LOG4J \
+    java $add_opens \
+	-classpath voter-client.jar:$CLIENTCLASSPATH -Dlog4j.configuration=file://$LOG4J \
         voter.SyncBenchmark \
         --displayinterval=5 \
         --warmup=5 \
@@ -133,7 +140,8 @@ function jdbc-benchmark-help() {
 
 function jdbc-benchmark() {
     jars-ifneeded
-    java -classpath voter-client.jar:$CLIENTCLASSPATH -Dlog4j.configuration=file://$LOG4J \
+    java $add_open \
+	-classpath voter-client.jar:$CLIENTCLASSPATH -Dlog4j.configuration=file://$LOG4J \
         voter.JDBCBenchmark \
         --displayinterval=5 \
         --duration=120 \
@@ -144,13 +152,31 @@ function jdbc-benchmark() {
 }
 
 function help() {
-    echo "Usage: ./run.sh {clean|cleanall|jars|server|init|client|async-benchmark|aysnc-benchmark-help|...}"
-    echo "       {...|sync-benchmark|sync-benchmark-help|jdbc-benchmark|jdbc-benchmark-help|simple-benchmark}"
+    echo "
+  Usage: ./run.sh [TARGET...]
+
+  Targets:
+     help | clean | cleanall | jars | init |
+     server | client |
+     async-benchmark | async-benchmark-help |
+     sync-benchmark | sync-benchmark-help |
+     jdbc-benchmark | jdbc-benchmark-help |
+     simple-benchmark
+
+  The default target is 'server'.
+  The 'client' target is the same as 'async-benchmark'.
+
+"
 }
 
 # Run the targets pass on the command line
 # If no first arg, run server
-if [ $# -eq 0 ]; then server; exit; fi
+if [ $# -eq 0 ];
+then
+    server;
+    exit;
+fi
+
 for arg in "$@"
 do
     echo "${0}: Performing $arg..."
